feat(fe2): experimenst

--- a/packages/frontend-2/assets/css/tailwind-setup/semantic-colors.css
+++ b/packages/frontend-2/assets/css/tailwind-setup/semantic-colors.css
@@ -73,7 +73,7 @@
   /* used only as the page background */
   --foundation-page: #121212;
   /* used as the background for any element that sits on the page */
-  --foundation: #171717;
+  --foundation: #1c1c1c;
   /* used as the background for any element that you want to emphasize */
   --foundation-2: #1e293b;
   /* for disabled backgrounds */
